Fixed clipping last carousel item

--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -1,7 +1,7 @@
 @import "../../index";
 
 .carouselContainer {
-  width: calc(100% - 80px);
+  width: calc(100% - 76px);
   max-width: 1600px;
   align-self: center;
 
